Implement make targets for browser, node.

--- a/wrappers/browser/test-browser.xhtml
+++ b/wrappers/browser/test-browser.xhtml
@@ -17,31 +17,18 @@
     <script type="&js;" src="&lib-jasmine;/jasmine-html.js"></script>
     <script type="&js;" src="&lib-jasmine;/boot.js"></script>
 
-    <script type="&js;" src="dist/staging/assert.js"></script>
+    <script type="&js;" src="dist/browser/assert.js"></script>
+    <script type="&js;" src="dist/browser/sharedUtilities.js"></script>
 
     <!-- The library we are testing. -->
-    <script type="&js;"
-            src="dist/staging/es7-membrane.js"
-            ></script>
+    <script type="&js;" src="dist/browser/es7-membrane.js"></script>
 
     <!-- Mocks to help with exercising the membrane. -->
-    <script type="&js;"
-            src="dist/staging/mocks.js"
-            ></script>
+    <script type="&js;" src="dist/browser/mocks.js"></script>
 
     <!-- Specifications -->
-    <script type="&js;"
-            src="spec/concepts.js"
-            ></script>
-    <script type="&js;"
-            src="spec/replaceProxies.js"
-            ></script>
-    <script type="&js;"
-            src="dist/staging/spec-overrides.js"
-            ></script>
-    <script type="&js;"
-            src="dist/staging/spec-use-cases.js"
-            ></script>
+    <script type="&js;" src="spec/concepts.js"></script>
+    <script type="&js;" src="spec/replaceProxies.js"></script>
 </head>
 <body>
 </body>
