--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -25,6 +25,7 @@
 	<script type="&js;" src="source/ProxyMapping.js"></script>
 	<script type="&js;" src="source/Membrane.js"></script>
 	<script type="&js;" src="source/ObjectGraphHandler.js"></script>
+	<script type="&js;" src="source/ModifyRulesAPI.js"></script>
 	<script type="&js;" src="source/dogfood.js"></script>
 
     <!-- Mocks to help with exercising the membrane. -->
