#11, add basic support for filtering the own keys of a proxied object.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -37,10 +37,12 @@
     <script type="&js;" src="spec/calledFromHandler.js"></script>
     <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
 	<script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
+	<script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
 
     <!-- Use case specifications -->
 	<script type="&js;" src="spec/useCases/storeUnknownAsLocal.js"></script>
 	<script type="&js;" src="spec/useCases/requireLocalDelete.js"></script>
+	<script type="&js;" src="spec/useCases/filterOwnKeys.js"></script>
 </head>
 <body>
 </body>
