#11, add a test showing how ordinary proxies with filterOwnKeys behave.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -31,7 +31,11 @@
     <!-- Mocks to help with exercising the membrane. -->
     <script type="&js;" src="dist/browser/mocks.js"></script>
 
-    <!-- Specifications -->
+	<!-- Tests for proxy behaviors that might be unexpected.
+	     Used to inform the membrane implementation. -->
+	<script type="&js;" src="spec/non-membrane/filterOwnKeys.js"></script>
+
+    <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
     <script type="&js;" src="spec/replaceProxies.js"></script>
     <script type="&js;" src="spec/calledFromHandler.js"></script>
