#56, add a mock logger library for the Membrane to use.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -33,6 +33,7 @@
 
 	<!-- Tests for proxy behaviors that might be unexpected.
 	     Used to inform the membrane implementation. -->
+	<script type="&js;" src="spec/non-membrane/logger.js"></script>
 	<script type="&js;" src="spec/non-membrane/filterOwnKeys.js"></script>
 
     <!-- Main Specifications -->
