--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -34,6 +34,7 @@
 	<!-- Tests for proxy behaviors that might be unexpected.
 	     Used to inform the membrane implementation. -->
 	<script type="&js;" src="spec/non-membrane/logger.js"></script>
+	<script type="&js;" src="spec/non-membrane/defineProperty.js"></script>
 	<script type="&js;" src="spec/non-membrane/filterOwnKeys.js"></script>
 
     <!-- Main Specifications -->
