--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -25,6 +25,7 @@
 	<script type="&js;" src="source/ProxyMapping.js"></script>
 	<script type="&js;" src="source/Membrane.js"></script>
 	<script type="&js;" src="source/ObjectGraphHandler.js"></script>
+	<script type="&js;" src="source/ProxyNotify.js"></script>
 	<script type="&js;" src="source/ModifyRulesAPI.js"></script>
 	<script type="&js;" src="source/dogfood.js"></script>
 
@@ -42,7 +43,8 @@
     <script type="&js;" src="spec/concepts.js"></script>
     <script type="&js;" src="spec/replaceProxies.js"></script>
     <script type="&js;" src="spec/calledFromHandler.js"></script>
-    <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
+	<script type="&js;" src="spec/proxyListeners.js"></script>
+	<script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
 	<script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
 	<script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
 	<script type="&js;" src="spec/properties/precedence.js"></script>
