Fixes #21, Use Case: Whitelist, Setting properties with private names.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -48,11 +48,13 @@
 	<script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
 	<script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
 	<script type="&js;" src="spec/properties/precedence.js"></script>
+	<script type="&js;" src="spec/properties/whitelist.js"></script>
 
     <!-- Use case specifications -->
 	<script type="&js;" src="spec/useCases/storeUnknownAsLocal.js"></script>
 	<script type="&js;" src="spec/useCases/requireLocalDelete.js"></script>
 	<script type="&js;" src="spec/useCases/filterOwnKeys.js"></script>
+	<script type="&js;" src="spec/useCases/whitelist.js"></script>
 </head>
 <body>
 </body>
