--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -38,6 +38,7 @@
     <script type="&js;" src="spec/non-membrane/defineProperty.js"></script>
     <script type="&js;" src="spec/non-membrane/deleteProperty.js"></script>
     <script type="&js;" src="spec/non-membrane/filterOwnKeys.js"></script>
+    <script type="&js;" src="spec/non-membrane/freeze-seal.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
