#75 Test mirroring with Object.freeze(), Object.seal().

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -42,7 +42,7 @@
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
-    <script type="&js;" src="spec/object-freeze.js"></script>
+    <script type="&js;" src="spec/freeze-seal.js"></script>
     <script type="&js;" src="spec/replaceProxies.js"></script>
     <script type="&js;" src="spec/calledFromHandler.js"></script>
     <script type="&js;" src="spec/proxyListeners.js"></script>
