--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -39,6 +39,7 @@
     <script type="&js;" src="spec/non-membrane/deleteProperty.js"></script>
     <script type="&js;" src="spec/non-membrane/filterOwnKeys.js"></script>
     <script type="&js;" src="spec/non-membrane/freeze-seal.js"></script>
+    <script type="&js;" src="spec/non-membrane/prototypes.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
