--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -58,6 +58,7 @@
     <script type="&js;" src="spec/useCases/requireLocalDelete.js"></script>
     <script type="&js;" src="spec/useCases/filterOwnKeys.js"></script>
     <script type="&js;" src="spec/useCases/whitelist.js"></script>
+    <script type="&js;" src="spec/useCases/disableTraps.js"></script>
 
     <script type="&js;" src="wrappers/browser/fireJasmine.js"></script>
 </head>
