Fixes #66: Notify listeners upon entry, exit of an object graph.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -47,6 +47,7 @@
     <script type="&js;" src="spec/replaceProxies.js"></script>
     <script type="&js;" src="spec/calledFromHandler.js"></script>
     <script type="&js;" src="spec/proxyListeners.js"></script>
+    <script type="&js;" src="spec/functionListeners.js"></script>
     <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
     <script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
     <script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
