Fixes #84:  Add tests for ObjectGraphHandler.prototype.defineLazyGetter.
Tests will be disabled if the API is unavailable.  (We are testing an
internal API.)

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -62,6 +62,10 @@
     <script type="&js;" src="spec/useCases/whitelist.js"></script>
     <script type="&js;" src="spec/useCases/disableTraps.js"></script>
 
+    <!-- Internal API's, not intended for public consumption.  Expect these
+         tests to be disabled in the future. -->
+    <script type="&js;" src="spec/internal/lazyGetters.js"></script>
+
     <script type="&js;" src="wrappers/browser/fireJasmine.js"></script>
 </head>
 <body>
