--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -49,6 +49,7 @@
     <script type="&js;" src="spec/calledFromHandler.js"></script>
     <script type="&js;" src="spec/proxyListeners.js"></script>
     <script type="&js;" src="spec/functionListeners.js"></script>
+    <script type="&js;" src="spec/manualBind.js"></script>
     <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
     <script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
     <script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
