--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -54,6 +54,7 @@
     <script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
     <script type="&js;" src="spec/properties/precedence.js"></script>
     <script type="&js;" src="spec/properties/whitelist.js"></script>
+    <script type="&js;" src="spec/properties/truncateArgList.js"></script>
 
     <!-- Use case specifications -->
     <script type="&js;" src="spec/useCases/storeUnknownAsLocal.js"></script>
