#95:  Implement DistortionsListener, which accepts JSON for distortions.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -27,6 +27,7 @@
     <script type="&js;" src="source/ObjectGraphHandler.js"></script>
     <script type="&js;" src="source/ProxyNotify.js"></script>
     <script type="&js;" src="source/ModifyRulesAPI.js"></script>
+    <script type="&js;" src="source/DistortionsListener.js"></script>
     <script type="&js;" src="source/dogfood.js"></script>
 
     <!-- Mocks to help with exercising the membrane. -->
