--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -42,6 +42,7 @@
     <script type="&js;" src="spec/non-membrane/freeze-seal.js"></script>
     <script type="&js;" src="spec/non-membrane/prototypes.js"></script>
     <script type="&js;" src="spec/non-membrane/lazyGetter.js"></script>
+    <script type="&js;" src="spec/non-membrane/argumentTruncation.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
