#127 Add a "pass through filter" to Membrane, ObjectGraphHandler

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -49,6 +49,7 @@
     <script type="&js;" src="spec/freeze-seal.js"></script>
     <script type="&js;" src="spec/replaceProxies.js"></script>
     <script type="&js;" src="spec/proxyListeners.js"></script>
+    <script type="&js;" src="spec/passThroughFilters.js"></script>
     <script type="&js;" src="spec/functionListeners.js"></script>
     <script type="&js;" src="spec/manualBind.js"></script>
     <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
