--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -52,6 +52,7 @@
     <script type="&js;" src="spec/passThroughFilters.js"></script>
     <script type="&js;" src="spec/functionListeners.js"></script>
     <script type="&js;" src="spec/manualBind.js"></script>
+    <script type="&js;" src="spec/primordials.js"></script>
     <script type="&js;" src="spec/properties/storeUnknownAsLocal.js"></script>
     <script type="&js;" src="spec/properties/requireLocalDelete.js"></script>
     <script type="&js;" src="spec/properties/filterOwnKeys.js"></script>
