#65, add basic tests for containers in a membrane.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -45,6 +45,8 @@
     <script type="&js;" src="spec/non-membrane/argumentTruncation.js"></script>
     <script type="&js;" src="spec/non-membrane/receiver.js"></script>
 
+    <script type="&js;" src="spec/non-membrane/containers/array-splice.js"></script>
+
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
     <script type="&js;" src="spec/freeze-seal.js"></script>
@@ -61,6 +63,12 @@
     <script type="&js;" src="spec/properties/precedence.js"></script>
     <script type="&js;" src="spec/properties/whitelist.js"></script>
     <script type="&js;" src="spec/properties/truncateArgList.js"></script>
+
+    <!-- Containers -->
+    <script type="&js;" src="spec/containers/Map/default.js"></script>
+    <script type="&js;" src="spec/containers/WeakMap/default.js"></script>
+    <script type="&js;" src="spec/containers/Set/default.js"></script>
+    <script type="&js;" src="spec/containers/WeakSet/default.js"></script>
 
     <!-- Use case specifications -->
     <script type="&js;" src="spec/useCases/storeUnknownAsLocal.js"></script>
