--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -28,7 +28,7 @@
     <script type="&js;" src="source/ProxyNotify.js"></script>
     <script type="&js;" src="source/ModifyRulesAPI.js"></script>
     <script type="&js;" src="source/DistortionsListener.js"></script>
-    <script type="&js;" src="source/dogfood.js"></script>
+    <script type="&js;" src="docs/dist/staging/dogfood.js"></script>
 
     <!-- Mocks to help with exercising the membrane. -->
     <script type="&js;" src="docs/dist/browser/mocks.js"></script>
