--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -44,6 +44,7 @@
     <script type="&js;" src="spec/non-membrane/lazyGetter.js"></script>
     <script type="&js;" src="spec/non-membrane/argumentTruncation.js"></script>
     <script type="&js;" src="spec/non-membrane/receiver.js"></script>
+    <script type="&js;" src="spec/non-membrane/instanceof.js"></script>
 
     <script type="&js;" src="spec/non-membrane/containers/array-splice.js"></script>
 
