#6: Fix all dogfood regressions.  #165, remove buggy inheritFilter code.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -50,6 +50,7 @@
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
+    <script type="&js;" src="spec/privateAPI.js"></script>
     <script type="&js;" src="spec/freeze-seal.js"></script>
     <script type="&js;" src="spec/features/replaceProxies.js"></script>
     <script type="&js;" src="spec/features/proxyListeners.js"></script>
