#171, add a testcase to illustrate the sealed-cyclic references problem.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -66,6 +66,9 @@
     <script type="&js;" src="spec/properties/whitelist.js"></script>
     <script type="&js;" src="spec/properties/truncateArgList.js"></script>
 
+    <!-- Sealed-cyclic references tests -->
+    <script type="&js;" src="spec/sealed-cyclic/directHandler.js"></script>
+
     <!-- Containers -->
     <script type="&js;" src="spec/containers/Map/default.js"></script>
     <script type="&js;" src="spec/containers/WeakMap/default.js"></script>
