#171, Priority Queue constructor, Membrane.createPriorityQueue().

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -22,6 +22,7 @@
 
     <!-- The library we are testing. -->
     <script type="&js;" src="source/moduleUtilities.js"></script>
+    <script type="&js;" src="source/PriorityQueue.js"></script>
     <script type="&js;" src="source/ProxyMapping.js"></script>
     <script type="&js;" src="source/Membrane.js"></script>
     <script type="&js;" src="source/ObjectGraphHandler.js"></script>
@@ -85,6 +86,7 @@
     <!-- Internal API's, not intended for public consumption.  Expect these
          tests to be disabled in the future. -->
     <script type="&js;" src="spec/internal/lazyGetters.js"></script>
+    <script type="&js;" src="spec/internal/priorityQueue.js"></script>
 
     <script type="&js;" src="wrappers/browser/fireJasmine.js"></script>
 </head>
