#171, A priority queue can fix the sealed cyclic references problem.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -88,6 +88,7 @@
          tests to be disabled in the future. -->
     <script type="&js;" src="spec/internal/lazyGetters.js"></script>
     <script type="&js;" src="spec/internal/priorityQueue.js"></script>
+    <script type="&js;" src="spec/sealed-cyclic/priorityHandler.js"></script>
 
     <script type="&js;" src="wrappers/browser/fireJasmine.js"></script>
 </head>
