#167: Write tests for Promises, async/await going through a Proxy, Membrane

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -46,13 +46,17 @@
     <script type="&js;" src="spec/non-membrane/receiver.js"></script>
     <script type="&js;" src="spec/non-membrane/instanceof.js"></script>
     <script type="&js;" src="spec/non-membrane/sealed-cyclic.js"></script>
+    <script type="&js;" src="spec/non-membrane/Promise.js"></script>
+    <script type="&js;" src="spec/non-membrane/generators.js"></script>
+    <script type="&js;" src="spec/non-membrane/iterators.js"></script>
 
     <script type="&js;" src="spec/non-membrane/containers/array-splice.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
+    <script type="&js;" src="spec/ecma/freeze-seal.js"></script>
+    <script type="&js;" src="spec/ecma/Promise.js"></script>
     <script type="&js;" src="spec/privateAPI.js"></script>
-    <script type="&js;" src="spec/freeze-seal.js"></script>
     <script type="&js;" src="spec/features/replaceProxies.js"></script>
     <script type="&js;" src="spec/features/proxyListeners.js"></script>
     <script type="&js;" src="spec/features/passThroughFilters.js"></script>
