--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -56,6 +56,7 @@
     <script type="&js;" src="spec/concepts.js"></script>
     <script type="&js;" src="spec/ecma/freeze-seal.js"></script>
     <script type="&js;" src="spec/ecma/Promise.js"></script>
+    <script type="&js;" src="spec/ecma/generators.js"></script>
     <script type="&js;" src="spec/privateAPI.js"></script>
     <script type="&js;" src="spec/features/replaceProxies.js"></script>
     <script type="&js;" src="spec/features/proxyListeners.js"></script>
