--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -57,6 +57,7 @@
     <script type="&js;" src="spec/ecma/freeze-seal.js"></script>
     <script type="&js;" src="spec/ecma/Promise.js"></script>
     <script type="&js;" src="spec/ecma/generators.js"></script>
+    <script type="&js;" src="spec/ecma/iterators.js"></script>
     <script type="&js;" src="spec/privateAPI.js"></script>
     <script type="&js;" src="spec/features/replaceProxies.js"></script>
     <script type="&js;" src="spec/features/proxyListeners.js"></script>
