--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -74,6 +74,8 @@
     <script type="&js;" src="spec/properties/truncateArgList.js"></script>
 
     <!-- Containers -->
+    <script type="&js;" src="spec/containers/Array/tc39.js"></script>
+    
     <script type="&js;" src="spec/containers/Map/default.js"></script>
     <script type="&js;" src="spec/containers/WeakMap/default.js"></script>
     <script type="&js;" src="spec/containers/Set/default.js"></script>
