--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -72,6 +72,8 @@
     <script type="&js;" src="spec/properties/precedence.js"></script>
     <script type="&js;" src="spec/properties/whitelist.js"></script>
     <script type="&js;" src="spec/properties/truncateArgList.js"></script>
+    <!-- I explicitly exclude spec/security/exports.js here. -->
+    <script type="&js;" src="spec/security/ObjectGraphHandler.js"></script>
 
     <!-- Containers -->
     <script type="&js;" src="spec/containers/Array/tc39.js"></script>
