--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -27,6 +27,7 @@
     <script type="&js;" src="source/ProxyHandlers/intro.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Base.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Forwarding.js"></script>
+    <script type="&js;" src="source/ProxyHandlers/LinkedList.js"></script>
 
     <!-- The library we are testing. -->
     <script type="&js;" src="source/moduleUtilities.js"></script>
@@ -64,6 +65,7 @@
 
     <!-- Tests for (future) ObjectGraphHandler components. -->
     <script type="&js;" src="spec/proxyHandlers/Forwarding.js"></script>
+    <script type="&js;" src="spec/proxyHandlers/LinkedList.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
