#214, #221 implement Master, Tracing proxy handlers.
* Remove LinkedList dependency on DimensionalMap.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -28,6 +28,8 @@
     <script type="&js;" src="source/ProxyHandlers/Base.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Forwarding.js"></script>
     <script type="&js;" src="source/ProxyHandlers/LinkedList.js"></script>
+    <script type="&js;" src="source/ProxyHandlers/Tracing.js"></script>
+    <script type="&js;" src="source/ProxyHandlers/Master.js"></script>
 
     <!-- The library we are testing. -->
     <script type="&js;" src="source/moduleUtilities.js"></script>
@@ -66,6 +68,8 @@
     <!-- Tests for (future) ObjectGraphHandler components. -->
     <script type="&js;" src="spec/proxyHandlers/Forwarding.js"></script>
     <script type="&js;" src="spec/proxyHandlers/LinkedList.js"></script>
+    <script type="&js;" src="spec/proxyHandlers/Tracing.js"></script>
+    <script type="&js;" src="spec/proxyHandlers/Master.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
