#210, introduce ObjectGraph constructor into Membrane.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -32,6 +32,7 @@
     <script type="&js;" src="source/moduleUtilities.js"></script>
     <script type="&js;" src="source/ProxyMapping.js"></script>
     <script type="&js;" src="source/Membrane.js"></script>
+    <script type="&js;" src="source/ObjectGraph.js"></script>
     <script type="&js;" src="source/ObjectGraphHandler.js"></script>
     <script type="&js;" src="source/ProxyNotify.js"></script>
     <script type="&js;" src="source/ModifyRulesAPI.js"></script>
@@ -60,11 +61,14 @@
 
     <script type="&js;" src="spec/non-membrane/containers/array-splice.js"></script>
 
-    <!-- Tests for (future) ObjectGraphHandler components. -->
+    <!-- Tests for (future) ObjectGraph components. -->
     <script type="&js;" src="spec/proxyHandlers/Forwarding.js"></script>
     <script type="&js;" src="spec/proxyHandlers/LinkedList.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Tracing.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Master.js"></script>
+
+    <!-- Tests for (future) ObjectGraph. -->
+    <script type="&js;" src="spec/ObjectGraph.js"></script>
 
     <!-- Main Specifications -->
     <script type="&js;" src="spec/concepts.js"></script>
