#225, add ProxyHandler to convert from shadow to target for Reflect

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -26,6 +26,7 @@
     <script type="&js;" src="source/ProxyHandlers/Forwarding.js"></script>
     <script type="&js;" src="source/ProxyHandlers/LinkedList.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Tracing.js"></script>
+    <script type="&js;" src="source/ProxyHandlers/ConvertFromShadow.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Master.js"></script>
 
     <!-- The library we are testing. -->
@@ -65,6 +66,7 @@
     <script type="&js;" src="spec/proxyHandlers/Forwarding.js"></script>
     <script type="&js;" src="spec/proxyHandlers/LinkedList.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Tracing.js"></script>
+    <script type="&js;" src="spec/proxyHandlers/ConvertFromShadow.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Master.js"></script>
 
     <!-- Tests for (future) ObjectGraph. -->
