#225, add ProxyHandler to update shadow target based on return values from other ProxyHandler objects.

--- a/wrappers/browser/debug-browser.xhtml
+++ b/wrappers/browser/debug-browser.xhtml
@@ -27,6 +27,7 @@
     <script type="&js;" src="source/ProxyHandlers/LinkedList.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Tracing.js"></script>
     <script type="&js;" src="source/ProxyHandlers/ConvertFromShadow.js"></script>
+    <script type="&js;" src="source/ProxyHandlers/UpdateShadow.js"></script>
     <script type="&js;" src="source/ProxyHandlers/Master.js"></script>
 
     <!-- The library we are testing. -->
@@ -67,6 +68,7 @@
     <script type="&js;" src="spec/proxyHandlers/LinkedList.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Tracing.js"></script>
     <script type="&js;" src="spec/proxyHandlers/ConvertFromShadow.js"></script>
+    <script type="&js;" src="spec/proxyHandlers/UpdateShadow.js"></script>
     <script type="&js;" src="spec/proxyHandlers/Master.js"></script>
 
     <!-- Tests for (future) ObjectGraph. -->
